#
# Project Basics
#


[project]

name = "n6adminpanel"
dynamic = ["version"]
description = "The *n6 Admin Panel* web application"
requires-python = ">=3.9, <3.12"
dependencies = [
    # inner *n6* dependencies:
    "n6lib",

    # external dependencies:
    "blinker",
    "flask-admin",
    "flask",
    "markupsafe",
    "requests",
    "sqlalchemy",
    "werkzeug",
    "wtforms",
]

#readme = "README.md"
maintainers = [
    {name = "CERT Polska", email = "n6@cert.pl"}
]
license = "AGPL-3.0-only"
keywords = [
    "n6", "security", "incident", "admin panel",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "invoke",
    "mkdocs",
    "mkdocs-material",
    "packaging",
    "pylint",
    "pytest",
    "pytest-cov",
    "unittest-expander",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage",
    "unittest-expander",
]

[project.urls]
Homepage = "https://github.com/CERT-Polska/n6"
Documentation = "https://n6.readthedocs.io/"
Repository = "https://github.com/CERT-Polska/n6.git"
Issues = "https://github.com/CERT-Polska/n6/issues"
Changelog = "https://github.com/CERT-Polska/n6/blob/master/CHANGELOG.md"


#
# `setuptools`-related settings
#


[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["n6*"]

[tool.setuptools.dynamic]
version = {file = ".n6-version"}
