#
# Project Basics
#


[project]

name = "n6datapipeline"
dynamic = [
    "version",
    "scripts",
]
description = "Data-processing-pipeline components of *n6*"
requires-python = ">=3.9, <3.12"
dependencies = [
    "n6lib",
    "n6sdk",

    "dnspython",
    "geoip2",
    "intelmq",
    "jinja2",
    "maxminddb",
    "mysqlclient",
    "pika",
    "pymongo",
    "python-dateutil",
    "redis",
    "sqlalchemy",
]

#readme = "README.md"
maintainers = [
    {name = "CERT Polska", email = "n6@cert.pl"}
]
license = "AGPL-3.0-only"
keywords = [
    "n6", "security", "incident", "data pipeline",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "invoke",
    "mkdocs",
    "mkdocs-material",
    "packaging",
    "pylint",
    "pytest",
    "pytest-cov",
    "unittest-expander",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage",
    "unittest-expander",
]

[project.urls]
Homepage = "https://github.com/CERT-Polska/n6"
Documentation = "https://n6.readthedocs.io/"
Repository = "https://github.com/CERT-Polska/n6.git"
Issues = "https://github.com/CERT-Polska/n6/issues"
Changelog = "https://github.com/CERT-Polska/n6/blob/master/CHANGELOG.md"


#
# `setuptools`-related settings
#


[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["n6*"]

[tool.setuptools.dynamic]
version = {file = ".n6-version"}
entry-points = {file = [
    ".console_scripts_ini_header",
    "console_scripts",
]}
