#
# Project Basics
#


[project]

name = "n6portal"
dynamic = ["version"]
description = "The *n6 Portal* web application"
requires-python = ">=3.9, <3.12"
dependencies = [
    "n6lib",
    "n6sdk",

    "pyramid",
]

#readme = "README.md"
maintainers = [
    {name = "CERT Polska", email = "n6@cert.pl"}
]
license = "AGPL-3.0-only"
keywords = [
    "n6", "security", "incident", "portal", "gui", "web",
]
classifiers = [
    "Framework :: Pyramid",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "invoke",
    "mkdocs",
    "mkdocs-material",
    "packaging",
    "pylint",
    "pytest",
    "pytest-cov",
    "unittest-expander",

    "pyramid-debugtoolbar",
    "waitress",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage",
    "unittest-expander",
]

[project.urls]
Homepage = "https://github.com/CERT-Polska/n6"
Documentation = "https://n6.readthedocs.io/"
Repository = "https://github.com/CERT-Polska/n6.git"
Issues = "https://github.com/CERT-Polska/n6/issues"
Changelog = "https://github.com/CERT-Polska/n6/blob/master/CHANGELOG.md"

[project.entry-points."paste.app_factory"]
main = "n6portal:main"


#
# `setuptools`-related settings
#


[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["n6*"]

[tool.setuptools.dynamic]
version = {file = ".n6-version"}
