#
# Project Basics
#


[project]

name = "n6sdk"
dynamic = ["version"]
description = "The basis for an *n6*-like REST API server"
requires-python = ">=3.9, <3.12"
dependencies = [
    "pyramid",
    "requests",
]

readme = "README.rst"
maintainers = [
    {name = "CERT Polska", email = "n6@cert.pl"}
]
license = "AGPL-3.0-only"
keywords = [
    "n6", "security", "incident", "api", "library", "framework",
]
classifiers = [
    "Environment :: Console",
    "Framework :: Pyramid",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    # varia:
    "coverage",
    "invoke",
    "mkdocs",
    "mkdocs-material",
    "packaging",
    "pylint",
    "pytest",
    "pytest-cov",
    "unittest-expander",

    # web-specific:
    "pyramid-debugtoolbar",
    "waitress",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage",
    "unittest-expander",
]

[project.urls]
Homepage = "https://github.com/CERT-Polska/n6"
Documentation = "https://n6.readthedocs.io/"
Repository = "https://github.com/CERT-Polska/n6.git"
Issues = "https://github.com/CERT-Polska/n6/issues"
Changelog = "https://github.com/CERT-Polska/n6/blob/master/CHANGELOG.md"

[project.scripts]
n6sdk_api_test = "n6sdk._api_test_tool.api_test_tool:main"


#
# `setuptools`-related settings
#


[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["n6*"]

[tool.setuptools.dynamic]
version = {file = ".n6-version"}
